# proton-kaon

./: .gitignore  README.md  main.py  pyproject.toml
configs/: csf.yaml  default.yaml  remote.yaml.example  remote_all.yaml  run_0001_model_vae_latent16_ch32_64_128_256_beta0.5_lr0.001_epoch200_actrelu_kern5_stride2_pad2_hw48x48_txlog1p_speciesall.yaml  run_0002_model_vae_latent32_ch32_64_128_256_beta0.5_lr0.001_epoch200_actrelu_kern5_stride2_pad2_hw48x48_txlog1p_speciesall.yaml  run_0003_model_vae_latent64_ch32_64_128_256_beta0.5_lr0.001_epoch200_actrelu_kern5_stride2_pad2_hw48x48_txlog1p_speciesall.yaml  run_0006_model_vae_latent8_ch32_64_128_256_beta0.5_lr0.001_epoch500_actrelu_kern5_stride2_pad2_hw48x48_txhill_mpv.yaml  run_0066_model_vae_latent8_ch32_64_128_256_beta0.5_lr0.001_epoch200_actrelu_kern5_stride2_pad2.yaml  run_0066_model_vae_latent8_ch32_64_128_256_beta0.5_lr0.001_epoch200_actrelu_kern5_stride2_pad2_hw48x48_txlog1p.yaml  run_0091_model_vae_latent16_ch32_64_128_256_beta1.0_lr0.001_epoch200_actsoftplus_kern5_stride2_pad2.yaml  run_0091_model_vae_latent16_ch32_64_128_256_beta1.0_lr0.001_epoch200_actsoftplus_kern5_stride2_pad2_hw48x48_txlog1p.yaml  run_0092_all_species_vae_latent8_ch32_64_128_256_beta0.5_lr0.001_epoch200_actrelu_kern5_stride2_pad2_hw48x48_txlog1p.yaml  sweep.yaml  sweep_all.yaml  sweep_latent_attn.yaml  sweep_transforms.yaml
docs/: METHODS.md
jobs/: sweep.sh
logs/: model_vae_latent4_beta10.0_lr0.001_epoch200.json  model_vae_latent4_ch32_64_128_256_beta10.0_lr0.001_epoch200_actsoftplus_kern5_stride2_pad2.json
notebooks/: csda_kaons.ipynb  (+8 more)
(+61 files in other folders)
