[project]
name = "proton-kaon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "awkward>=2.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "uproot>=5.7.2",
]
